--- a/.gitignore/package.json
+++ b/.gitignore/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "pixelteambot",
-  "version": "1.0.0",
-  "description": "",
+  "name": "UltimatePT",
+  "description": "le bot de la pixelteam",
+  "version": "0.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "author": "UltimatePT",
-  "license": "ISC"
+  "dependencies": {
+    "discord.js": "11.1.0",
+    "request": "2.81.0"
+  }
 }
